--- a/.github/workflows/test-core.yml
+++ b/.github/workflows/test-core.yml
@@ -6,14 +6,6 @@ name: test core
 
 on:
   push:
-    branches:
-      - dev
-      - next
-  pull_request:
-    paths:
-      - '.github/workflows/test-core.yml'
-      - 'core/**'
-      - '!core/tauri/scripts/**'
 
 env:
   RUST_BACKTRACE: 1
@@ -93,7 +85,7 @@ jobs:
           cargo update -p time --precise 0.3.15
           cargo update -p ignore --precise 0.4.18
           cargo update -p raw-window-handle --precise 0.5.0
-          cargo update -p cargo_toml --precise 0.15.2
+          cargo update -p cargo_toml:0.15.3 --precise 0.15.2
 
       - name: test
         run: cargo test --target ${{ matrix.platform.target }} ${{ matrix.features.args }}
